# c_bool

./: .gitignore  Makefile  clib.json  meson.build
include/: bool.h  bool_module.h  deps.h  module.h  module2.h
src/: bool.c  bool_module.c  deps.c  module.c
tests/: test_bool1.c  test_bool2.c  test_bool_module1.c  test_bool_module2.c
